--- a/src/main/resources/templates/byID.html
+++ b/src/main/resources/templates/byID.html
@@ -1,10 +1,32 @@
 <!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
-$END$
+<form th:method="PATCH"
+      th:action="@{/users/{id}(id=${user.getId()})}"
+      th:object="${user}">
+    <label for="name">Enter name:</label>
+    <input type="text" th:field="*{name}" id="name"/>
+    <br/>
+    <label for="surName">Enter surname: </label>
+    <input type="text" th:field="*{surname}" id="surName"/>
+    <br/>
+    <label for="age">Enter name: </label>
+    <input type="text" th:field="*{age}" id="age"/>
+    <br/>
+    <input type="submit" value="Update!"/>
+    <br/>
+
+</form>
+
+<form th:method="DELETE"
+      th:action="@{/users/{id}(id=${user.getId()})}">
+    <input type="submit" value="Delete"/>
+</form>
 </body>
 </html>
